Fix mobile layout for contact page

--- a/contact.html
+++ b/contact.html
@@ -63,52 +63,44 @@
                     
                     <!-- Email -->
                     <a href="mailto:bevan2628@gmail.com" style="text-decoration: none;">
-                        <div style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); padding: 2rem; border-radius: 12px; color: white; transition: transform 0.3s; cursor: pointer;">
-                            <div style="display: flex; align-items: center; gap: 1.5rem;">
-                                <i class="fas fa-envelope" style="font-size: 2.5rem;"></i>
-                                <div>
-                                    <h3 style="font-size: 1.3rem; margin-bottom: 0.5rem;">Email</h3>
-                                    <p style="opacity: 0.95;">bevan2628@gmail.com</p>
-                                </div>
+                        <div class="contact-card" style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);">
+                            <i class="fas fa-envelope contact-icon"></i>
+                            <div class="contact-info">
+                                <h3 class="contact-title">Email</h3>
+                                <p class="contact-text">bevan2628@gmail.com</p>
                             </div>
                         </div>
                     </a>
 
                     <!-- GitHub -->
                     <a href="https://github.com/bevan222" target="_blank" style="text-decoration: none;">
-                        <div style="background: linear-gradient(135deg, #24292e 0%, #1a1e22 100%); padding: 2rem; border-radius: 12px; color: white; transition: transform 0.3s; cursor: pointer;">
-                            <div style="display: flex; align-items: center; gap: 1.5rem;">
-                                <i class="fab fa-github" style="font-size: 2.5rem;"></i>
-                                <div>
-                                    <h3 style="font-size: 1.3rem; margin-bottom: 0.5rem;">GitHub</h3>
-                                    <p style="opacity: 0.95;">github.com/bevan222</p>
-                                </div>
+                        <div class="contact-card" style="background: linear-gradient(135deg, #24292e 0%, #1a1e22 100%);">
+                            <i class="fab fa-github contact-icon"></i>
+                            <div class="contact-info">
+                                <h3 class="contact-title">GitHub</h3>
+                                <p class="contact-text">github.com/bevan222</p>
                             </div>
                         </div>
                     </a>
 
                     <!-- Medium -->
                     <a href="https://medium.com/@bevan2628" target="_blank" style="text-decoration: none;">
-                        <div style="background: linear-gradient(135deg, #00ab6c 0%, #009960 100%); padding: 2rem; border-radius: 12px; color: white; transition: transform 0.3s; cursor: pointer;">
-                            <div style="display: flex; align-items: center; gap: 1.5rem;">
-                                <i class="fab fa-medium" style="font-size: 2.5rem;"></i>
-                                <div>
-                                    <h3 style="font-size: 1.3rem; margin-bottom: 0.5rem;">Medium Blog</h3>
-                                    <p style="opacity: 0.95;">@bevan2628</p>
-                                </div>
+                        <div class="contact-card" style="background: linear-gradient(135deg, #00ab6c 0%, #009960 100%);">
+                            <i class="fab fa-medium contact-icon"></i>
+                            <div class="contact-info">
+                                <h3 class="contact-title">Medium Blog</h3>
+                                <p class="contact-text">@bevan2628</p>
                             </div>
                         </div>
                     </a>
 
                     <!-- LinkedIn -->
                     <a href="https://www.linkedin.com/in/po-wen-lu" target="_blank" style="text-decoration: none;">
-                        <div style="background: linear-gradient(135deg, #0077b5 0%, #00669c 100%); padding: 2rem; border-radius: 12px; color: white; transition: transform 0.3s; cursor: pointer;">
-                            <div style="display: flex; align-items: center; gap: 1.5rem;">
-                                <i class="fab fa-linkedin" style="font-size: 2.5rem;"></i>
-                                <div>
-                                    <h3 style="font-size: 1.3rem; margin-bottom: 0.5rem;">LinkedIn</h3>
-                                    <p style="opacity: 0.95;">Po-Wen Lu</p>
-                                </div>
+                        <div class="contact-card" style="background: linear-gradient(135deg, #0077b5 0%, #00669c 100%);">
+                            <i class="fab fa-linkedin contact-icon"></i>
+                            <div class="contact-info">
+                                <h3 class="contact-title">LinkedIn</h3>
+                                <p class="contact-text">Po-Wen Lu</p>
                             </div>
                         </div>
                     </a>
