--- a/contact.html
+++ b/contact.html
@@ -59,48 +59,48 @@
                 </div>
 
                 <!-- Contact Methods -->
-                <div class="grid" style="grid-template-columns: 1fr; gap: 1.5rem;">
+                <div style="display: flex; flex-direction: column; gap: 1.5rem;">
                     
                     <!-- Email -->
-                    <a href="mailto:bevan2628@gmail.com" style="text-decoration: none;">
+                    <a href="mailto:bevan2628@gmail.com" style="text-decoration: none; display: block;">
                         <div class="contact-card" style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);">
-                            <i class="fas fa-envelope contact-icon"></i>
-                            <div class="contact-info">
-                                <h3 class="contact-title">Email</h3>
-                                <p class="contact-text">bevan2628@gmail.com</p>
+                            <i class="fas fa-envelope" style="font-size: 2.5rem; flex-shrink: 0;"></i>
+                            <div style="flex: 1; min-width: 0;">
+                                <h3 style="font-size: 1.3rem; margin-bottom: 0.5rem; font-weight: 600;">Email</h3>
+                                <p style="opacity: 0.95; word-break: break-all; font-size: 0.95rem;">bevan2628@gmail.com</p>
                             </div>
                         </div>
                     </a>
 
                     <!-- GitHub -->
-                    <a href="https://github.com/bevan222" target="_blank" style="text-decoration: none;">
+                    <a href="https://github.com/bevan222" target="_blank" style="text-decoration: none; display: block;">
                         <div class="contact-card" style="background: linear-gradient(135deg, #24292e 0%, #1a1e22 100%);">
-                            <i class="fab fa-github contact-icon"></i>
-                            <div class="contact-info">
-                                <h3 class="contact-title">GitHub</h3>
-                                <p class="contact-text">github.com/bevan222</p>
+                            <i class="fab fa-github" style="font-size: 2.5rem; flex-shrink: 0;"></i>
+                            <div style="flex: 1; min-width: 0;">
+                                <h3 style="font-size: 1.3rem; margin-bottom: 0.5rem; font-weight: 600;">GitHub</h3>
+                                <p style="opacity: 0.95; word-break: break-all; font-size: 0.95rem;">github.com/bevan222</p>
                             </div>
                         </div>
                     </a>
 
                     <!-- Medium -->
-                    <a href="https://medium.com/@bevan2628" target="_blank" style="text-decoration: none;">
+                    <a href="https://medium.com/@bevan2628" target="_blank" style="text-decoration: none; display: block;">
                         <div class="contact-card" style="background: linear-gradient(135deg, #00ab6c 0%, #009960 100%);">
-                            <i class="fab fa-medium contact-icon"></i>
-                            <div class="contact-info">
-                                <h3 class="contact-title">Medium Blog</h3>
-                                <p class="contact-text">@bevan2628</p>
+                            <i class="fab fa-medium" style="font-size: 2.5rem; flex-shrink: 0;"></i>
+                            <div style="flex: 1; min-width: 0;">
+                                <h3 style="font-size: 1.3rem; margin-bottom: 0.5rem; font-weight: 600;">Medium Blog</h3>
+                                <p style="opacity: 0.95; font-size: 0.95rem;">@bevan2628</p>
                             </div>
                         </div>
                     </a>
 
                     <!-- LinkedIn -->
-                    <a href="https://www.linkedin.com/in/po-wen-lu" target="_blank" style="text-decoration: none;">
+                    <a href="https://www.linkedin.com/in/po-wen-lu" target="_blank" style="text-decoration: none; display: block;">
                         <div class="contact-card" style="background: linear-gradient(135deg, #0077b5 0%, #00669c 100%);">
-                            <i class="fab fa-linkedin contact-icon"></i>
-                            <div class="contact-info">
-                                <h3 class="contact-title">LinkedIn</h3>
-                                <p class="contact-text">Po-Wen Lu</p>
+                            <i class="fab fa-linkedin" style="font-size: 2.5rem; flex-shrink: 0;"></i>
+                            <div style="flex: 1; min-width: 0;">
+                                <h3 style="font-size: 1.3rem; margin-bottom: 0.5rem; font-weight: 600;">LinkedIn</h3>
+                                <p style="opacity: 0.95; font-size: 0.95rem;">Po-Wen Lu</p>
                             </div>
                         </div>
                     </a>
