Add profile photo to homepage

--- a/index.html
+++ b/index.html
@@ -50,9 +50,14 @@
     <!-- About Section -->
     <section>
         <h2 class="section-title">關於我</h2>
-        <div class="card">
-            <div class="card-content">
-                <p class="card-text" style="font-size: 1.1rem; line-height: 1.8;">
+        
+        <!-- Profile Card -->
+        <div class="profile-section">
+            <div class="profile-image-container">
+                <img src="profile.jpg" alt="盧柏文" class="profile-image">
+            </div>
+            <div class="profile-content">
+                <p style="font-size: 1.1rem; line-height: 1.8; color: #555;">
                     畢業於<strong>國立台南大學資訊工程學系</strong>（主修）及<strong>經營管理學系</strong>（輔修），
                     熱愛觀察產品細節，並致力於打造兼具使用者價值與商業成效的產品。
                     <br><br>
